--- a/css/chat.css
+++ b/css/chat.css
@@ -167,9 +167,8 @@ a:visited {
     color: black;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: large;
-    padding: 10px;
-    border-radius: 60px;
-    margin: 10px;
+    padding: 15px;
+    margin: 30px;
     text-align: left;
 }
 
@@ -179,9 +178,8 @@ a:visited {
     color: black;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: large;
-    padding: 10px;
-    border-radius: 60px;
-    margin: 10px;
+    padding: 15px;
+    margin: 30px;
     text-align: left;
 }
 
@@ -191,9 +189,8 @@ a:visited {
     color: black;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: large;
-    padding: 10px;
-    border-radius: 60px;
-    margin: 10px;
+    padding: 15px;
+    margin: 30px;
     text-align: left;
 }
 
@@ -203,9 +200,8 @@ a:visited {
     color: black;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: large;
-    padding: 10px;
-    border-radius: 60px;
-    margin: 10px;
+    padding: 15px;
+    margin: 30px;
     text-align: left;
 }
 
@@ -215,8 +211,11 @@ a:visited {
     color: black;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: large;
-    padding: 10px;
-    border-radius: 60px;
-    margin: 10px;
+    padding: 15px;
+    margin: 30px;
     text-align: left;
+}
+
+.h1 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
