--- a/css/skriva.css
+++ b/css/skriva.css
@@ -113,20 +113,20 @@ li a:hover:not(.active) {
 }
 
 a:visited {
-    color: coral;
+    color: #2B2D42;
     background-color: transparent;
     text-decoration:dotted;
     font-size: larger;
   }
   
   a:hover {
-    color: coral;
+    color: #2B2D42;
     text-decoration: none;
     font-size: larger;
   }
 
   a:active {
-    color: rgb(255, 98, 0);
+    color:#2B2D42;
     background-color: transparent;
     text-decoration: underline;
     font-size: larger;
